minor css fix on encryption x alignment

--- a/assets/css/section_main.css
+++ b/assets/css/section_main.css
@@ -362,7 +362,7 @@
 
 .svg_wrapper_x{
   position: absolute;
-  right: .9rem;
+  right: -0.1rem;
   top: 2.5rem;
   width: 45px;
   height: 45px;
